fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,7 @@ body {
 header
 {
     background-color: #a63961;
-    height: 250px; 
-    
-
-    /* background-image: url(images/smallstar.png);
-    background-position: -200px -100px;
-    background-repeat: no-repeat;
-    background-size: 100%; */
-    
+    height: 250px;   
 }
 
 h1 {
@@ -26,6 +19,14 @@ h1 {
     padding: 50px 20px 20px 20px;
 }
 
+.course-title {
+    font-family: "Kumbh Sans";
+    font-size: 1.2rem;
+    color: #f9e7d6;
+    text-align: center;
+    margin-top: 0.5rem;
+    font-weight: 400;
+}
 article {
 
     color:#a63961;
@@ -34,15 +35,22 @@ article {
     margin: auto;
 }
 .projects {
-    /* background-image: url(images/bigstar.png);
-    background-position: 200px -108px;
-    background-repeat: no-repeat;
-    background-size: 100%; */
-    display: flex;
+    
     flex-direction: column;
     align-items: center;
     position: relative;
     padding-bottom: 50px; 
+    display: flex;
+  justify-content: center;
+
+  gap: 2em;
+
+  
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+
+  position: relative;
 }
 .projectbox a:hover {
     color: rgb(37, 94, 21);
@@ -121,43 +129,43 @@ footer a{
 footer a:hover {
     color: rgb(37, 94, 21);
 }
-/* #container {
-    max-width: 1200px;
-    min-width: 900px;
-    margin: 0 auto; 
-}
-#banner {
-    width: 110px;
-    height: 250px;
-    position: relative;
-    margin: 0 auto;
-} */
 
-@media only screen and (min-width: 600px){
-    
+
+@media only screen and (min-width: 900px){
     main {
         flex: 1;
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
-        padding-bottom: 4rem;
+        /* padding-bottom: 4rem; */
         box-sizing: border-box;
+        padding-bottom: 100px; 
     }
-
+    
     header {
-        height: 250px;  
-        /* background-position: -150px -120px;
-        background-size: 120%; */
+        position: relative;
         width: 100%;
+        max-width: none;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;       
+        align-items: center;          
+        justify-content: flex-start; 
+        height: 250px;                
+        padding-top: 20px;
+        box-sizing: border-box;
+
     }
+    .course-title {
+        margin: 10px;          
+        font-size: 1.2rem;
+        text-align: center;
+        padding-top: 10px;
+      }
 
     h1 {
         text-align: center;
-        padding: 0; 
+        padding: 40px; 
         margin: 0;
     }
     p {
@@ -165,17 +173,16 @@ footer a:hover {
     }
 
  .projects {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    gap: 2em;
-    width: 100%;
-    position: relative;
-    width: 100%;
-    padding: 1rem;
-    position: relative;
+  width: 100%;
+  max-width: none;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2em;
+  padding: 1rem;
+  box-sizing: border-box;
  }
  
  .projectbox {
@@ -185,6 +192,7 @@ footer a:hover {
     margin: 0;
     align-items: center;
     height: 277.4px;
+    box-sizing: border-box;
  }
 
  
@@ -206,25 +214,33 @@ footer a:hover {
  }
  .disco{
     position: absolute;
-    bottom:0;
-    right: 30px;
-    width: 15%; 
-    /* transform: translateY(160px); */
-    transform: none;
-    z-index: 2;
-    animation: wiggle 1s infinite;
-    transform-origin: bottom center;
+  bottom: 0;
+  right:0;   /* WAS 30px */
+  width: 15%;
+  max-width: 250px;
+  height: auto;
+  box-sizing: border-box;
+ }
+ footer {
+    width: 100%;
+    max-width: none;
+    text-align: center;
+    box-sizing: border-box;
+    padding: none;
  }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+#container {
+    max-width: 1200px;
+    min-width: 900px;
+    margin: 0 auto; 
 }
-
-main {
-    padding-bottom: 100px; 
+#banner {
+    width: 100%;
+    max-width: 1600px;
+    height: 250px;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 10px;
 }
 
 }
